add panel instead of table on responses

--- a/SOAP-dontDropIt/Views/Home/Index.cshtml
+++ b/SOAP-dontDropIt/Views/Home/Index.cshtml
@@ -16,16 +16,16 @@
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
         </p>
-        <p><a class="btn btn-default" href="https://github.com/login">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://github.com/JetpayPaymentServices-Dev-FL" target="_blank">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>View Our Magic Processing Gateway</h2>
         <p>View our Magic Services ProcessingGateway for available API functionality. Documentation to follow soon...</p>
-        <p><a class="btn btn-default" href="https://stage.collectorsolutions.com/magic-services/ProcessingGateway.asmx">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://stage.collectorsolutions.com/magic-services/ProcessingGateway.asmx" target="_blank">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>View Our Legacy Documentation</h2>
         <p>View our Legacy Services site for information on how to setup your service reference and view supported operations.</p>
-        <p><a class="btn btn-default" href="http://api.collectorsolutions.com/#">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://api.collectorsolutions.com/#" target="_blank">Learn more &raquo;</a></p>
     </div>
 </div>
