update to views, remove old controller, update help area, error views add to controllers

--- a/SOAP-dontDropIt/Views/Home/Help.cshtml
+++ b/SOAP-dontDropIt/Views/Home/Help.cshtml
@@ -39,7 +39,7 @@
                         Magic Servics call use TLS 1.2 transport security. If you are not using .NET 4.5.2 or higher, you need to follow these steps:
                         <ul>
                         <li>Close VS 2013</li> 
-                            <li>Install the following extension: https://visualstudiogallery.msdn.microsoft.com/63750942-1ebe-45dd-bade-552dd850873e</li> 
+                            <li>Install the following extension: <a href="https://visualstudiogallery.msdn.microsoft.com/63750942-1ebe-45dd-bade-552dd850873e" target="_blank">https://visualstudiogallery.msdn.microsoft.com/63750942-1ebe-45dd-bade-552dd850873e</a></li> 
                             <li>Re-Open the project needing the service reference after installation is complete.</li> 
                             <li>Go To Tools ->Security Protocol Manager 2013<br>
                                 <img src="~/Images/image2016-7-15 9-52-11.png" /></li> 
@@ -74,7 +74,7 @@ https://stage.collectorsolutions.com/magic-ui/VirtualTerminal/8E3F20CE5619431D9B
         <div class="panel panel-default ">
             <div class="panel-heading accordion-toggle collapsed question-toggle" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question3">
                 <h4 class="panel-title">
-                    <a href="#" class="ing"><span class="label label-default">Question</span>  Where can I in contact with your developers?</a>
+                    <a href="#" class="ing"><span class="label label-default">Question</span>  How can I get in contact with your developers?</a>
                 </h4>
 
             </div>
