--- a/SOAP-dontDropIt/Views/Home/Index.cshtml
+++ b/SOAP-dontDropIt/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>.NET Magic Web Services</h1>
-    <p class="lead">Jetpay Payment Services API provides our clients with the capability to process both eCheck (ACH) and Credit Card transactions utilizing any store-front technology (e.g. eCommerce Web-Site, POS software, IVR, Kiosk Software) capable of interacting with .Net Web-Services.</p>
+    <p class="lead">Jetpay Payment Services (SOAP) provide our clients with the capability to process both eCheck (ACH) and Credit Card transactions utilizing any store-front technology (e.g. eCommerce Web-Site, POS software, IVR, Kiosk Software) capable of interacting with .Net Web-Services.</p>
     <p><a href="@Url.Action("Index", "MagicServices")" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
