--- a/SOAP-dontDropIt/Views/MagicServices/_VirtualTerminalTransactionGetResponsePartial.cshtml
+++ b/SOAP-dontDropIt/Views/MagicServices/_VirtualTerminalTransactionGetResponsePartial.cshtml
@@ -13,6 +13,9 @@
                 <div class="panel-body">
                     <ul class="list-group">
                         <li class="list-group-item">
+                            <strong class="">Response Code</strong> <div class="">@Model.RESPONSECODE</div>
+                        </li>
+                        <li class="list-group-item">
                             <strong class="">Transaction Identifier</strong> <div class="">@Model.TRANSACTIONID</div>
 
                         </li>
