--- a/SOAP-dontDropIt/Views/LegacyServices/VirtualTerminalTransactionGet.cshtml
+++ b/SOAP-dontDropIt/Views/LegacyServices/VirtualTerminalTransactionGet.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="loader"></div>
 <div class="container">
-        <h2>Virtual Terminal Transaction (GET)</h2>
+        <h2>Legacy Virtual Terminal Transaction (GET)</h2>
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
