--- a/SOAP-dontDropIt/Views/Shared/_Layout.cshtml
+++ b/SOAP-dontDropIt/Views/Shared/_Layout.cshtml
@@ -37,7 +37,8 @@
         <br><br>
         <footer>
             <p>
-                <a href="http://www.jetpay.com/payments-products-servies.php" target="_blank"><img src="~/Images/jetpay-small.png" class="img-responsive" /></a>  &copy; @DateTime.Now.Year - JetPay Payments Services, FL, LLC<a class="pull-right" href="http://api.collectorsolutions.com/">CSI Legacy Web Services Documentation</a></p>
+                <a href="http://www.jetpay.com/payments-products-servies.php" target="_blank"><img src="~/Images/jetpay-small.png" class="img-responsive" /></a>  &copy; @DateTime.Now.Year - JetPay Payments Services, FL, LLC<a class="pull-right" href="http://api.collectorsolutions.com/">CSI Legacy Web Services Documentation</a>
+            </p>
         </footer>
     </div>
 
