minor update to text

--- a/SOAP-dontDropIt/Views/Home/Index.cshtml
+++ b/SOAP-dontDropIt/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>.NET Magic Web Services</h1>
-    <p class="lead">Jetpay Payment Services (SOAP) provide our clients with the capability to process both eCheck (ACH) and Credit Card transactions utilizing any store-front technology (e.g. eCommerce Web-Site, POS software, IVR, Kiosk Software) capable of interacting with .Net Web-Services.</p>
+    <p class="lead">Jetpay Payment Services (SOAP) provides our clients with the capability to process both eCheck (ACH) and Credit Card transactions utilizing any store-front technology (e.g. eCommerce Web-Site, POS software, IVR, Kiosk Software) capable of interacting with .Net Web-Services.</p>
     <p><a href="@Url.Action("Index", "MagicServices")" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
@@ -12,7 +12,7 @@
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            Magic's MVC5 Services project gives you a insight on how to consume our various API calls and leverage patterns-based way to build dynamic websites that
+            Magic's MVC5 Services sample project gives you a insight on how to consume our various API calls and leverage patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
         </p>
@@ -24,8 +24,8 @@
         <p><a class="btn btn-default" href="https://stage.collectorsolutions.com/magic-services/ProcessingGateway.asmx" target="_blank">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>View Our Legacy Documentation</h2>
-        <p>View our Legacy Services site for information on how to setup your service reference and view supported operations.</p>
-        <p><a class="btn btn-default" href="http://api.collectorsolutions.com/#" target="_blank">Learn more &raquo;</a></p>
+        <h2>View Our RESTful Documentation</h2>
+        <p>View our RESTful API site for information on how to leverage webAPI with JSON. Note: this is a little different from SOAP.</p>
+        <p><a class="btn btn-default" href="https://magic.collectorsolutions.com/magic-api/swagger/ui/index" target="_blank">Learn more &raquo;</a></p>
     </div>
 </div>
