--- a/SOAP-dontDropIt/Views/Shared/_Layout.cshtml
+++ b/SOAP-dontDropIt/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
     <link rel="icon" type="image/png" href="~/Images/favicon.png" />
 </head>
 <body>
