--- a/JPPaymentServicesAPIDemo/Views/Home/Landing.cshtml
+++ b/JPPaymentServicesAPIDemo/Views/Home/Landing.cshtml
@@ -95,7 +95,7 @@
                                     <div class="panel-body">
                                         <p><i class="devicon-jquery-plain-wordmark colored"></i></p>
                                         <p><a href="#" class="btn btn-default btn-lg disabled"><span class="demo-name">SOAP Demo &raquo;</span></a></p>
-                                        <p><a href="#" class="btn btn-default btn-lg"><span class="demo-name">RESTful Demo &raquo;</span></a></p>
+                                        <p><a href="https://magic-api-js.azurewebsites.net/" class="btn btn-default btn-lg"><span class="demo-name">RESTful Demo &raquo;</span></a></p>
                                     </div>
                                 </div>
                             </div>
